# desk

./: .gitignore  BUILD_OFFLINE_EXE.md  HOW_TO_BUILD_EXE.md  README.md  package.json  vite.config.ts
.github/workflows/: build-windows.yml
github/workflows/: build.yaml
src/: App.tsx  fonts.css  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: AnalyticsTab.tsx  CalendarTab.tsx  ClientsTab.tsx  ResourcesTab.tsx  TerminalTab.tsx
src/data/: mockData.ts
src/utils/: translations.ts
