[package]
name = "workspace-pro"
version = "1.0.0"
description = "A Fully Arabic Workspace and Asset Booking Manager with High-End Offline Security Activation Code"
authors = ["Workspace Enterprise"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
