[package]
name = "deskbook"
version = "0.1.0"
description = "مقر ديسك - تطبيق إدارة المساحات"
authors = ["you"]
license = ""
repository = ""
default-run = "deskbook"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[profile.release]
panic = "abort"   # حجم أصغر
codegen-units = 1 # أداء أفضل
lto = true        # تحسين وقت الربط
opt-level = "s"   # تحسين الحجم
strip = true      # حذف الرموز

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
